[gd_scene load_steps=10 format=3 uid="uid://dayts72hbkndu"]

[ext_resource type="Script" path="res://Scripts/Skills/fire_rock.gd" id="1_r6yev"]
[ext_resource type="Texture2D" uid="uid://bjqd4l7lvkdk3" path="res://Assets/Images/Skills/Firerain/fire1.png" id="2_jgix1"]
[ext_resource type="Texture2D" uid="uid://dryb5uixkktvo" path="res://Assets/Images/Skills/Firerain/fire2.png" id="3_gjql1"]
[ext_resource type="Texture2D" uid="uid://bgnmllpvmj6s8" path="res://Assets/Images/Skills/Firerain/fire3.png" id="4_5ojd5"]
[ext_resource type="Texture2D" uid="uid://bp4mm2qr04sfd" path="res://Assets/Images/Skills/Firerain/shadow.png" id="5_xh0op"]
[ext_resource type="AudioStream" uid="uid://cft00832wmncs" path="res://Assets/Sounds/FXs/Bullets/Sound_FireballUnleash.wav" id="6_7f5kx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a0f6u"]
radius = 58.0

[sub_resource type="SpriteFrames" id="SpriteFrames_5baqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jgix1")
}, {
"duration": 1.0,
"texture": ExtResource("3_gjql1")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ojd5")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lj22k"]
radius = 36.0

[node name="FireRock" type="Area2D"]
collision_layer = 0
collision_mask = 96
script = ExtResource("1_r6yev")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a0f6u")

[node name="FireRockSprite" type="AnimatedSprite2D" parent="."]
z_index = 5
rotation = -2.35619
sprite_frames = SubResource("SpriteFrames_5baqr")
autoplay = "default"
frame_progress = 0.648675
offset = Vector2(20, 0)

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
y_sort_enabled = true
texture = ExtResource("5_xh0op")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="SoundFireballUnleash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7f5kx")
volume_db = -10.0
autoplay = true
bus = &"Sound"

[node name="WaterConditionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterConditionArea"]
shape = SubResource("CircleShape2D_lj22k")
